[package]
name = "antiProbe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
diesel = { version = "2.1.3", features = ["r2d2", "chrono", "sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0.139", features = ["derive"] }
anyhow = "1.0.58"
chrono = { version = "0.4.19", features = ["serde"] }
actix = "0.13.3"
log = "0.4.18"
log4rs = "1.3.0"
paste = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.3", features = ["multipart", "cookies"] }
select = "0.6"
regex = "1.5.4"
